# yarfillo-vtu-backend

./: .gitignore  ENDPOINT_VERIFICATION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  README.md  UV_QUICK_REFERENCE.md  VERIFICATION_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py
app/api/v1/: __init__.py  airtime.py  auth.py  beneficiaries.py  data.py  schemas.py  transactions.py  wallet.py  webhooks.py
app/errors/: __init__.py  exceptions.py  handlers.py
app/integrations/: __init__.py
app/integrations/payscribe/: __init__.py  client.py
app/models/: __init__.py  beneficiary.py  transaction.py  user.py  wallet.py  webhook_log.py
app/services/: __init__.py  airtime_service.py  auth_service.py  beneficiary_service.py  data_service.py  transaction_service.py  wallet_service.py  webhook_service.py
app/tasks/: __init__.py  celery_app.py  webhook_tasks.py
app/utils/: __init__.py  constants.py  helpers.py  response.py  security.py
migrations/: env.py
scripts/: init_db.py  setup.sh
