[project]
name = "yarfillo-vtu-backend"
version = "1.0.0"
description = "Backend API for Yarfillo VTU Platform - Airtime, Data, and Wallet Management"
requires-python = ">=3.12"
dependencies = [
    # Flask Core
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "Flask-Migrate==4.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Limiter==3.5.0",
    # Database
    "SQLAlchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    # Authentication & Security
    "PyJWT==2.8.0",
    "bcrypt==4.1.2",
    "cryptography==42.0.2",
    # HTTP Client
    "requests==2.31.0",
    "httpx==0.26.0",
    # Task Queue
    "celery==5.3.4",
    "redis==5.0.1",
    # Validation
    "marshmallow==3.20.1",
    "marshmallow-sqlalchemy==0.29.0",
    # API Documentation
    "flask-restx==1.3.0",
    # Logging
    "structlog==24.1.0",
    # Environment
    "python-dotenv==1.0.0",
    # Utilities
    "python-dateutil==2.8.2",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-flask==1.3.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "faker==22.0.0",
    # Code Quality
    "black==24.1.1",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    # Development Tools
    "ipython==8.20.0",
    "ipdb==0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

